--- a/test/fixtures/bills.yml
+++ b/test/fixtures/bills.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: bills
+#
+#  id                        :integer          not null, primary key
+#  total_bill_amount         :float            not null
+#  amount_originally_owed    :float            not null
+#  owing_at_creation_user_id :integer          not null
+#  created_at                :datetime         not null
+#  updated_at                :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
