--- a/test/fixtures/group_memberships.yml
+++ b/test/fixtures/group_memberships.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: group_memberships
+#
+#  id              :integer          not null, primary key
+#  group_id        :integer          not null
+#  group_member_id :integer          not null
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
