--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: users
+#
+#  id                   :integer          not null, primary key
+#  email                :string           not null
+#  password_digest      :string           not null
+#  session_token        :string           not null
+#  current_user_balance :float            default(0.0), not null
+#  created_at           :datetime         not null
+#  updated_at           :datetime         not null
+#  name                 :string           not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
