--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-router-dom": "^4.1.2",
     "react-simple-dropdown": "^3.2.0",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.4.1",
     "webpack-cli": "^2.0.10"
+  },
+  "devDependencies": {
+  "redux-logger": "^3.0.6"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
