--- a/package.json
+++ b/package.json
@@ -11,22 +11,19 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-simple-dropdown": "^3.2.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.4.1",
     "webpack-cli": "^2.0.10"
   },
-  "devDependencies": {
-  "redux-logger": "^3.0.6"
-  },
+  "devDependencies": {},
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
   "main": "webpack.config.js",
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack"
